updated content with boundaries slide

--- a/content/tutorial/3.md
+++ b/content/tutorial/3.md
@@ -1,6 +1,5 @@
 ---
-image: null
-cta: How it works ->
+image: '/images/tutorial/glyph01.png'
+cta: Next ->
 ---
-# You will be given a series of operations.
-# You must complete these operations to earn points.
+# Solve the clues to locate the rendezvous points.
