--- a/content/tutorial/5.md
+++ b/content/tutorial/5.md
@@ -1,5 +1,5 @@
 ---
-image: '/images/tutorial/glyph02.png'
+image: '/images/tutorial/glyph03.png'
 cta: Next ->
 ---
-# relay your location at the rendezvous to receive the cipher.
+# Decrypt the cipher and enter the code to receive new missions.
