--- a/content/tutorial/6.md
+++ b/content/tutorial/6.md
@@ -1,5 +1,5 @@
 ---
-image: '/images/tutorial/glyph03.png'
+image: '/images/tutorial/glyph04.png'
 cta: Next ->
 ---
-# Decrypt the cipher and enter the code to receive new missions.
+# Complete and document the missions to receive points.
