--- a/content/tutorial/7.md
+++ b/content/tutorial/7.md
@@ -1,5 +1,5 @@
 ---
-image: '/images/tutorial/glyph04.png'
+image: '/images/tutorial/glyph06.png'
 cta: Next ->
 ---
-# Complete and document the missions to receive points.
+# You have until 6pm. The team with the most points gets to live.
