--- a/content/tutorial/8.md
+++ b/content/tutorial/8.md
@@ -1,5 +1,5 @@
 ---
-image: '/images/tutorial/glyph06.png'
+image: '/images/tutorial/pixelMap.gif'
 cta: Next ->
 ---
-# You have until 6pm. The team with the most points gets to live.
+# Rendezvous points are constrained to these areas, Look sharp.
