--- a/content/tutorial/9.md
+++ b/content/tutorial/9.md
@@ -4,10 +4,8 @@ cta: Next ->
 ---
 # Need to know
 
-##  If a mission doesn’t need to be done at a specific location, you can complete it at any point in the day.
-
 ##  You must always stay with your group. Points will not be given to missions finished without all members present.
 
-##  You likely won’t make all the rendezvous. Solve as many clues as you can and plan the most strategic route.
+##  You must upload all of your missions to the designated photo album by 6pm. Uploads after 6pm, will not count.
 
-## You must upload all of your missions to the designated photo album by 6pm. Uploads after 6pm, will not count.
+##  You may only use public transportation and your feet to get around throughout the operation. If you are caught using other means, you will be docked.
