--- a/content/tutorial/1.md
+++ b/content/tutorial/1.md
@@ -2,5 +2,8 @@
 image: null
 cta: Begin ->
 ---
-# This is not a test
-# This is a conspiracy
+# This is not a test.
+# This is a conspiracy.
+# If you are reading this, you are an agent of the illumiNYti. 
+# If you are not, you are one now.
+# Prepare to be activated.
