--- a/content/tutorial/10.md
+++ b/content/tutorial/10.md
@@ -1,5 +1,9 @@
 ---
-image: '/images/tutorial/glyph05.png'
-cta: Swipe up
+image: null
+cta: Next ->
 ---
-# Here is your tranciever. Use it to complete todays operation
+# Tips
+
+##  If a mission doesn’t need to be done at a specific location, you can complete it at any point in the day.
+
+##  You likely won’t make all the rendezvous. Solve as many clues as you can and plan the most strategic route.
