--- a/content/tutorial/2.md
+++ b/content/tutorial/2.md
@@ -1,7 +1,6 @@
 ---
 image: null
-cta: Activate ->
+cta: How it works ->
 ---
-# If you are reading this, you are an agent of the illumiNYti. 
-# If you are not, you are one now.
-# Prepare to be activated.
+# You will be given a series of operations.
+# You must complete these operations to earn points.
