--- a/content/tutorial/4.md
+++ b/content/tutorial/4.md
@@ -1,5 +1,5 @@
 ---
-image: '/images/tutorial/glyph01.png'
+image: '/images/tutorial/glyph02.png'
 cta: Next ->
 ---
-# Solve the clues to locate the rendezvous points.
+# relay your location at the rendezvous to receive the cipher.
