ok i did a lot of things. Hopefully it works.

--- a/content/instructions/3.md
+++ b/content/instructions/3.md
@@ -2,4 +2,4 @@
 image: '/images/tutorial/glyph01.png'
 cta: Next ->
 ---
-# Solve the clues to locate the rendezvous points.
+## Solve the clues to locate the rendezvous points.
