--- a/content/instructions/6.md
+++ b/content/instructions/6.md
@@ -2,4 +2,4 @@
 image: '/images/tutorial/glyph04.png'
 cta: Next ->
 ---
-# Complete and document the missions to receive points.
+## Complete and document the missions to receive points.
