updated to feature all picked rendezvous

--- a/content/instructions/10.md
+++ b/content/instructions/10.md
@@ -8,4 +8,4 @@ cta: Next ->
 
 ###  You likely won’t make all the rendezvous. Solve as many clues as you can and plan the most strategic route.
 
-### Hints and help are avaialble when requested. If you need support, call into HQ at 617 640 1117.
+### Hints and help are available when requested. If you need support, call into HQ at 617 640 1117.
