updated sprite and also install instructions

--- a/content/instructions/10.md
+++ b/content/instructions/10.md
@@ -2,7 +2,7 @@
 image: null
 cta: Next ->
 ---
-## Tips
+## Good to know
 
 ###  If a mission doesn’t need to be done at a specific location, you can complete it at any point in the day.
 
