--- a/content/instructions/9.md
+++ b/content/instructions/9.md
@@ -8,4 +8,4 @@ cta: Next ->
 
 ###  You must upload all of your missions to the designated photo album by 6pm. Uploads after 6pm, will not count.
 
-###  You may only use public transportation and your feet to get around throughout the operation. If you are caught using other means, you will be docked.
+###  You may only use publicly available transportation and your feet to get around throughout the operation.
